--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "nuxt": "^2.0.0"
+    "jquery": "^3.4.1",
+    "nuxt": "^2.0.0",
+    "vue-slick": "^1.1.15"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
