--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "nuxt": "^2.0.0",
-    "vue-slick": "^1.1.15"
+    "vue-slick": "^1.1.15",
+    "vue-yandex-maps": "^0.8.10"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
