--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-rc.11",
     "cross-env": "^5.2.0",
+    "crypto": "^1.0.1",
     "express": "^4.16.4",
     "jquery": "^3.4.1",
     "nuxt": "^2.0.0",
