--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jquery": "^3.4.1",
     "nuxt": "^2.0.0",
     "vue-slick": "^1.1.15",
+    "vue-the-mask": "^0.11.1",
     "vue-yandex-maps": "^0.8.13"
   },
   "devDependencies": {
