--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "nuxt": "^2.0.0",
     "vue-slick": "^1.1.15",
     "vue-the-mask": "^0.11.1",
-    "vue-yandex-maps": "^0.8.13"
+    "vue-yandex-maps": "^0.8.13",
+    "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
